# tidc

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/json_writer/: mod.rs
src/parser/: artifacts.rs  mod.rs  scanner.rs
