[package]
name = "tidc"
version = "0.1.0"
authors = ["hillium <yujuncen@pingcap.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
pprof = { version = "0.4", features = ["flamegraph"] }

[dependencies]
tinyvec = { version = "1.2.0", features = ["alloc"] }
quick-error = { version = "2.0" }

[[bin]]
name = "tidc"
